Fix clipped vote arrows in the recently viewed links gadget

--- a/sass/misc.scss
+++ b/sass/misc.scss
@@ -208,3 +208,11 @@ ul.report-reasons {
 .expand-media:hover {
 	overflow: unset !important;
 }
+
+// recently review links
+.gadget {
+	.midcol {
+		width: 28px;
+		margin: 0;
+	}
+}
